[package]
name = "blockchat"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
anyhow = "1.0.42"
rsa = {version = "0.5.0", features = ["alloc"] }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
