[package]
name = "luk_chain"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
description = "Generalised blockchain library"
repository = "https://github.com/FreddieBrown/LukChain"
keywords = ["crypto", "blockchain"]


[lib]
name = "luk_chain"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
anyhow = "1.0.42"
rsa = {version = "0.5.0", features = ["alloc", "serde"] }
rand = "0.8.4"
serde = {version = "1.0.89", default-features = false, features = ["derive"] }
serde_json = "1.0.66"
bincode = "1.3.3"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
pico-args = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.14"
toml = "0.5.8"
futures = "0.3.16"
async-trait = "0.1.51"

[dev-dependencies]
tracing-test = "0.1.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3
